compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_constructor_different_module_same_name_outer.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option\nimport opt\n\npub fn main() {\n    option.Some(opt.Some(1))\n}\n"
---
----- BEFORE ACTION

import option
import opt

pub fn main() {
    option.Some(opt.Some(1))
    ▔▔▔▔▔▔▔↑                
}


----- AFTER ACTION

import option.{Some}
import opt

pub fn main() {
    Some(opt.Some(1))
}
