compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_multiple_generic_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport result\n\npub fn main() -> result.Result(Int, String) {\n    result.Ok(1)\n}\n"
---
----- BEFORE ACTION

import result

pub fn main() -> result.Result(Int, String) {
                       ▔▔▔▔▔▔▔↑              
    result.Ok(1)
}


----- AFTER ACTION

import result.{type Result}

pub fn main() -> Result(Int, String) {
    result.Ok(1)
}
